<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.smallaswater</groupId>
    <artifactId>RsNPC</artifactId>
    <version>2.5.3-SNAPSHOT</version>

    <name>RsNPC</name>
    <description>RsNPC -- NPC plugin for Nukkit</description>
    <url>https://github.com/MemoriesOfTime/RsNPC</url>

    <licenses>
        <license>
            <name>GNU Affero General Public License v3.0</name>
            <url>https://www.gnu.org/licenses/agpl-3.0.html</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <scm>
        <connection>https://github.com/MemoriesOfTime/RsNPC.git</connection>
        <developerConnection>scm:git:git@github.com:MemoriesOfTime/RsNPC.git</developerConnection>
        <url>https://github.com/MemoriesOfTime/RsNPC</url>
    </scm>

    <developers>
        <developer>
            <name>LT_Name</name>
            <email>yelanyun@gmail.com</email>
            <roles>
                <role>Developer</role>
            </roles>
            <timezone>+8</timezone>
        </developer>
    </developers>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
        <!--统一兼容 Nukkit-MOT 与 NukkitX：NukkitX 服务端普遍使用 Java 8，需产出 Java 8 字节码
            （编译需使用 JDK 17+，因为 Nukkit-MOT 依赖为 Java 17 字节码）-->
        <maven.compiler.release>8</maven.compiler.release>
        <lib.GameCore.version>1.6.14</lib.GameCore.version>
    </properties>

    <repositories>
        <repository>
            <id>opencollab-repo-release</id>
            <url>https://repo.opencollab.dev/maven-releases/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>opencollab-repo-snapshot</id>
            <url>https://repo.opencollab.dev/maven-snapshots/</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>repo-lanink-cn</id>
            <url>https://repo.lanink.cn/repository/maven-public/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>cn.nukkit</groupId>
            <artifactId>Nukkit</artifactId>
            <version>MOT-20251101.135342-640</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>cn.lanink</groupId>
            <artifactId>MemoriesOfTime-GameCore</artifactId>
            <version>${lib.GameCore.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.smallaswater.autoupdata</groupId>
            <artifactId>AutoUpData</artifactId>
            <version>1.3.0</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>24.1.0</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.36</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <release>${maven.compiler.release}</release>
                    <encoding>${maven.compiler.encoding}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.google.code.maven-replacer-plugin</groupId>
                <artifactId>replacer</artifactId>
                <version>1.5.3</version>
                <executions>
                    <execution>
                        <id>add-version</id>
                        <phase>process-sources</phase>
                        <goals>
                            <goal>replace</goal>
                        </goals>
                        <configuration>
                            <includes>
                                <include>${project.basedir}/src/main/resources/plugin.yml</include>
                                <include>${project.basedir}/src/main/java/com/smallaswater/npc/RsNPC.java</include>
                                <include>${project.basedir}/src/main/java/com/smallaswater/npc/utils/GameCoreDownload.java</include>
                            </includes>
                            <replacements>
                                <replacement>
                                    <token>version: ".*"</token>
                                    <value>version: "${project.version}"</value>
                                </replacement>
                                <replacement>
                                    <token>VERSION = ".*"</token>
                                    <value>VERSION = "${project.version}"</value>
                                </replacement>
                                <replacement>
                                    <token>MINIMUM_GAME_CORE_VERSION = ".*"</token>
                                    <value>MINIMUM_GAME_CORE_VERSION = "${lib.GameCore.version}"</value>
                                </replacement>
                            </replacements>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <!--Maven中央仓库相关-->
            <plugin>
                <groupId>org.sonatype.central</groupId>
                <artifactId>central-publishing-maven-plugin</artifactId>
                <version>0.7.0</version>
                <extensions>true</extensions>
                <configuration>
                    <publishingServerId>central</publishingServerId>
                    <autoPublish>true</autoPublish>
                    <waitUntil>published</waitUntil>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.3.2</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <show>private</show>
                    <nohelp>true</nohelp>
                    <charset>UTF-8</charset>
                    <encoding>UTF-8</encoding>
                    <docencoding>UTF-8</docencoding>
                    <additionalJOption>-Xdoclint:none</additionalJOption>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>3.0.1</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>


</project>